config/kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scoutplan-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scoutplan-app
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: scoutplan-app
    spec:
      # initContainers:
      # - name: migrations
      #   image: registry.digitalocean.com/scoutplan/app
      #   command:
      #   - rake
      #   - db:abort_if_pending_migrations
      containers:
        - name: scoutplan-app
          image: registry.digitalocean.com/scoutplan/app
          imagePullPolicy: "Always"
          readinessProbe:
            httpGet:
              path: /robots.txt
              port: 3000
              scheme: HTTP
          ports:
            - containerPort: 3000
