config/kube/sidekiq.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scoutplan-sidekiq
spec:
  replicas: 2
  selector:
    matchLabels:
      app: scoutplan-sidekiq
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 5
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: scoutplan-sidekiq
    spec:
      containers:
        - name: scoutplan-sidekiq
          image: registry.digitalocean.com/scoutplan/app
          command:
            - bundle
            - exec
            - sidekiq
          imagePullPolicy: "Always"
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: 7433
          #   initialDelaySeconds: 60
          #   timeoutSeconds: 10
          ports:
            - containerPort: 3000
